--- a/frontend/web/style/style.css
+++ b/frontend/web/style/style.css
@@ -109,6 +109,10 @@ input[type=range]:hover::-moz-range-thumb {
     margin-right: 4px;
 }
 
+input[type=number] {
+    width: 60px;
+}
+
 span {
     display: flex;
     align-items: center;
