--- a/frontend/web/style/style.css
+++ b/frontend/web/style/style.css
@@ -168,6 +168,10 @@ input::-webkit-inner-spin-button {
     width: 40px;
 }
 
+#fileName {
+    align-self: center;
+}
+
 #audioControls {
     border: 2px solid #bbb;
     display: flex;
